removed live-server settings and related entries

--- a/app-typescript/package.json
+++ b/app-typescript/package.json
@@ -1,15 +1,13 @@
 {
   "name": "app-typescript",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "lite-server"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "lite-server": "^2.5.4"
-  }
+  "devDependencies": {},
+  "dependencies": {},
+  "description": ""
 }
